* gc.c: Fix unlimited memory growth with large values of   RUBY_FREE_MIN. patched by tmm1(Aman Gupta).   [Bug #8095] [ruby-core:53405]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@39810 b2dd03c8-39d4-4d8f-98ff-823fe69b080e